--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -19,8 +19,11 @@ jobs:
           go-version: '1.16' # or later
 
       - name: Install fyne-cross
-        run: go install github.com/fyne-io/fyne-cross@latest
+        run: |
+          go install fyne.io/fyne/v2/cmd/fyne@latest
+          go install github.com/fyne-io/fyne-cross@latest
 
       - name: Cross Compile for Windows
         run: |
+          fyne package -os windows -icon Icon.png
           fyne-cross windows -output soundscape-sync ./cmd/soundscape-sync/main.go 
