--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -8,20 +8,26 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: "catthehacker/ubuntu:act-latest"
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # - name: Set up Go
-      #   uses: actions/setup-go@v2
-      #   with:
-      #     go-version: '1.22' # or later
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.22' # or later
 
-      # - name: Install fyne-cross
-      #   run: |
-      #     go install github.com/fyne-io/fyne-cross@latest
+      - name: Install fyne-cross
+        run: |
+          go install github.com/fyne-io/fyne-cross@latest
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v1
 
       - name: Cross Compile for Windows
         run: |
-          docker run -t --rm --name application-name -v /var/run/docker.sock:/var/run/docker.sock -v $(pwd):$(pwd) -w $(pwd) golang:alpine3.19 /bin/ash -c "go install github.com/fyne-io/fyne-cross@latest && fyne-cross windows -output soundscape-sync -icon logo.png ./cmd/soundscape-sync/main.go"
+          # docker run -t --rm --name application-name -v /var/run/docker.sock:/var/run/docker.sock -v $(pwd):$(pwd) -w $(pwd) golang:alpine3.19 /bin/ash -c "go install github.com/fyne-io/fyne-cross@latest && fyne-cross windows -output soundscape-sync -icon logo.png ./cmd/soundscape-sync/main.go"
+          fyne-cross windows -output soundscape-sync -icon logo.png ./cmd/soundscape-sync/main.go
