--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: "catthehacker/ubuntu:act-latest"
+      image: "docker/dind"
 
     steps:
       - name: Checkout code
