--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
     - name: Install fyne-cross
       run: go install github.com/fyne-io/fyne-cross@latest
     - name: Cross-compile for Windows
-      run: fyne-cross windows -app-id com.cloonar.soundscapesync ./cmd/soundscape-sync/main.go
+      run: fyne-cross windows -app-id com.cloonar.soundscapesync
     - name: Cross-compile for Linux
-      run: fyne-cross linux ./cmd/soundscape-sync/main.go
+      run: fyne-cross linux
     - name: Cross-compile for macOS
-      run: fyne-cross darwin ./cmd/soundscape-sync/main.go
+      run: fyne-cross darwin
