--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -30,4 +30,4 @@ jobs:
       - name: Cross Compile for Windows
         run: |
           # docker run -t --rm --name application-name -v /var/run/docker.sock:/var/run/docker.sock -v $(pwd):$(pwd) -w $(pwd) golang:alpine3.19 /bin/ash -c "go install github.com/fyne-io/fyne-cross@latest && fyne-cross windows -output soundscape-sync -icon logo.png ./cmd/soundscape-sync/main.go"
-          fyne-cross windows -output soundscape-sync -icon logo.png ./cmd/soundscape-sync/main.go
+          fyne-cross windows
