--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - main
 
 jobs:
   build:
@@ -31,3 +32,4 @@ jobs:
         run: |
           # docker run -t --rm --name application-name -v /var/run/docker.sock:/var/run/docker.sock -v $(pwd):$(pwd) -w $(pwd) golang:alpine3.19 /bin/ash -c "go install github.com/fyne-io/fyne-cross@latest && fyne-cross windows -output soundscape-sync -icon logo.png ./cmd/soundscape-sync/main.go"
           fyne-cross windows
+          ls -al
