--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,8 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.16
+    - name: Set up Docker
+      uses: docker/setup-buildx-action@v2
     - name: Install fyne-cross
       run: go install github.com/fyne-io/fyne-cross@latest
     - name: Cross-compile for macOS
