--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,19 +48,24 @@ jobs:
         go-version: 1.16
     - name: Install fyne-cross
       run: go install github.com/fyne-io/fyne-cross@latest
-    - name: Install Homebrew
-      run: |
-        /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-    - name: Install Docker
-      run: |
-        brew install docker
+    # - name: Install Homebrew
+    #   run: |
+    #     /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+    # - name: Install Docker
+    #   run: |
+    #     brew install docker
+    - name: Set up Docker
+      uses: crazy-max/ghaction-setup-docker@v3
     - name: Build Fyne application for macOS
       env:
         CGO_ENABLED: 1
         GOOS: darwin
         GOARCH: amd64 # Change if targeting a different architecture
         CC: o32-clang # Specify your C compiler here
-      run: fyne-cross darwin
+      run: |
+        set -x
+        docker version
+        fyne-cross darwin
     - name: Upload macOS artifact
       uses: actions/upload-artifact@v3
       with:
