--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,4 +56,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: macos-build
-        path: fyne-cross/bin/darwin-amd64
+        path: SoundscapeSync.app
