--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,19 +20,20 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.16
+        go-version: 1.22
     - name: Install fyne-cross
       run: go install github.com/fyne-io/fyne-cross@latest
     - name: Cross-compile for Windows
       run: fyne-cross windows
     - name: Cross-compile for Linux
-      run: fyne-cross linux
+      run: |
+        fyne-package -os linux -icon Icon.png
+        ls -al
     - name: Upload Windows artifact
       uses: actions/upload-artifact@v3
       with:
         name: windows-build
         path: fyne-cross/bin/windows-amd64
-        
     - name: Upload Linux artifact
       uses: actions/upload-artifact@v3
       with:
@@ -49,9 +50,7 @@ jobs:
     - name: Install fyne
       run: go install fyne.io/fyne/v2/cmd/fyne@latest
     - name: Build Fyne application for macOS
-      run: |
-        fyne package -os darwin -icon Icon.png
-        ls -al
+      run: fyne package -os darwin -icon Icon.png
     - name: Upload macOS artifact
       uses: actions/upload-artifact@v3
       with:
