--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
         go-version: 1.22
     - name: Install fyne-cross
       run: go install github.com/fyne-io/fyne-cross@latest
+    - name: Install fyne
+      run: go install fyne.io/fyne/v2/cmd/fyne@latest
     - name: Cross-compile for Windows
       run: fyne-cross windows
     - name: Cross-compile for Linux
