change version for deb creation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,10 +32,11 @@ jobs:
       run: |
         mkdir -p .debpkg/DEBIAN
         echo "Package: SoundscapeSync" > .debpkg/DEBIAN/control
-        echo "Version: ${{ github.ref }}" >> .debpkg/DEBIAN/control
+        echo "Version: 1.0" >> .debpkg/DEBIAN/control
         echo "Architecture: amd64" >> .debpkg/DEBIAN/control
         echo "Maintainer: Dominik Polakovics <dominik.polakovics@cloonar.com>" >> .debpkg/DEBIAN/control
         mkdir -p .debpkg/usr/bin
+        cat .debpkg/DEBIAN/control
         cp fyne-cross/bin/linux-amd64/soundscape-sync .debpkg/usr/bin
     - name: Create DEB package
       uses: jiro4989/build-deb-action@v3
@@ -43,7 +44,7 @@ jobs:
         package: SoundscapeSync
         package_root: .debpkg
         maintainer: "Dominik Polakovics <dominik.polakovics@cloonar.com>"
-        version: ${{ github.ref }}
+        version: 1.0
         arch: 'amd64'
         desc: 'This is my sample package.'
         depends: 'ffmpeg'
