--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,15 @@
-name: Cross-compile with fyne-cross
+name: Manual Release
 
 on:
-  push:
-    branches:
-      - main
-    paths-ignore:
-      - '**.md'
-  pull_request:
-    branches:
-      - main
-    paths-ignore:
-      - '**.md'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Release version'
+        required: true
+
 
 jobs:
-  build:
+  build-linux:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -23,8 +19,6 @@ jobs:
         go-version: 1.22
     - name: Install fyne-cross
       run: go install github.com/fyne-io/fyne-cross@latest
-    - name: Cross-compile for Windows
-      run: fyne-cross windows
     - name: Cross-compile for Linux
       run: fyne-cross linux
 
@@ -51,11 +45,6 @@ jobs:
       run: |
         mv *.deb soundscapesync-1.0.deb
 
-    - name: Upload Windows artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: windows-build
-        path: fyne-cross/bin/windows-amd64
     - name: Upload Linux artifact
       uses: actions/upload-artifact@v3
       with:
@@ -66,6 +55,27 @@ jobs:
       with:
         name: debian-build
         path: soundscapesync-1.0.deb
+
+  build-windows:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.22
+    - name: Install fyne-cross
+      run: go install github.com/fyne-io/fyne-cross@latest
+    - name: Cross-compile for Windows
+      run: fyne-cross windows
+    - name: Cross-compile for Linux
+      run: fyne-cross linux
+    - name: Upload Windows artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: windows-build
+        path: fyne-cross/bin/windows-amd64
+
   build-mac:
     runs-on: macos-13
     steps:
@@ -83,3 +93,20 @@ jobs:
       with:
         name: macos-build
         path: SoundscapeSync.app
+
+  create-release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: linux-build
+      - uses: actions/download-artifact@v4
+        with:
+          name: windows-build
+      - uses: actions/download-artifact@v4
+        with:
+          name: macos-build
+      - name: show folders
+        run: | 
+          ls -al
+          ls -al macos-build/
