--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,51 +13,41 @@ on:
       - '**.md'
 
 jobs:
-  build:
+  build-linux:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v5
+      with:
+        go-version: 1.22
+    - name: Install fyne-cross
+      run: go install github.com/fyne-io/fyne-cross@latest
+    - name: Cross-compile for Linux
+      run: fyne-cross linux
+
+  build-windows:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Go
+      uses: actions/setup-go@v5
       with:
         go-version: 1.22
     - name: Install fyne-cross
       run: go install github.com/fyne-io/fyne-cross@latest
     - name: Cross-compile for Windows
       run: fyne-cross windows
-    - name: Cross-compile for Linux
-      run: fyne-cross linux
 
-
-    - name: Upload Windows artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: windows-build
-        path: fyne-cross/bin/windows-amd64
-    - name: Upload Linux artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: linux-build
-        path: fyne-cross/bin/linux-amd64
-    - name: Upload Debian artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: debian-build
-        path: soundscapesync-1.0.deb
   build-mac:
     runs-on: macos-13
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v5
       with:
         go-version: 1.22
     - name: Install fyne
       run: go install fyne.io/fyne/v2/cmd/fyne@latest
     - name: Build Fyne application for macOS
       run: fyne package -os darwin -icon Icon.png
-    - name: Upload macOS artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: macos-build
-        path: SoundscapeSync.app
