--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
         description: 'Release version'
         required: true
 
+permissions:
+  contents: write
 
 jobs:
   build-linux:
@@ -71,6 +73,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-linux, build-windows, build-mac]
     steps:
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication
+        with:
+          tag_name: ${{ github.event.inputs.version }}  # Tag name from the push event
+          release_name: Release ${{ github.event.inputs.version }}  # Name of the release
+          draft: true  # Set to true if you want to create a draft release
+          prerelease: true  # Set to true if this is a prerelease
+
       - uses: actions/download-artifact@v4
         with:
           name: linux-build
@@ -100,10 +113,28 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: windows-build
+      - name: Upload Windows Asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}  # URL for uploading assets
+          asset_path: SoundscapeSync.exe  # Path to your asset file
+          asset_name: SoundscapeSync.exe  # Name of the asset file
+          asset_content_type: application/x-msdownload  # Content type of the asset
 
       - uses: actions/download-artifact@v4
         with:
           name: macos-build
+      - name: Unzip MacOS
+        run: |
+          unzip SoundscapeSync.zip
+          ls -al
+      - name: Upload MacOS Asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}  # URL for uploading assets
+          asset_path: SoundscapeSync.zip  # Path to your asset file
+          asset_name: SoundscapeSync.app  # Name of the asset file
+          asset_content_type: application/octet-stream  # Content type of the asset
 
       - name: show folders
         run: | 
