--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
         path: fyne-cross/bin/windows-amd64
 
   build-mac:
-    runs-on: macos-13
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
     - name: Set up Go
@@ -115,6 +115,8 @@ jobs:
           name: windows-build
       - name: Upload Windows Asset
         uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}  # URL for uploading assets
           asset_path: SoundscapeSync.exe  # Path to your asset file
@@ -130,6 +132,8 @@ jobs:
           ls -al
       - name: Upload MacOS Asset
         uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}  # URL for uploading assets
           asset_path: SoundscapeSync.zip  # Path to your asset file
