--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
       with:
         go-version: 1.22
     - name: Install fyne
-      run: go install fyne.io/fyne/v2/cmd/fyne@latest
+      run: go install fyne.io/fyne/v2/cmd/fyne@2.4.0
     - name: Build Fyne application for macOS
       # run: fyne package -os darwin -icon Icon.png
       run: GOOS=darwin GOARCH=arm64 go build -o SoundscapeSync.app
