--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,7 +67,7 @@ jobs:
   create-release:
     runs-on: ubuntu-latest
     # needs: [build-linux, build-windows, build-mac]
-    needs: [build-windows]
+    needs: [build-windows, build-linux]
     steps:
       - name: Create Release
         id: create_release
