[TASK] add funding text, remove file from building pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,14 @@ on:
     paths-ignore:
       - '**.md'
       - '.github/workflows/release.yml'
+      - 'FUNDING.yml'
   pull_request:
     branches:
       - main
     paths-ignore:
       - '**.md'
       - '.github/workflows/release.yml'
+      - 'FUNDING.yml'
 
 jobs:
   build-linux:
