--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,14 @@ on:
     paths-ignore:
       - '**.md'
       - '.github/workflows/release.yml'
-      - 'FUNDING.yml'
+      - '.github/FUNDING.yml'
   pull_request:
     branches:
       - main
     paths-ignore:
       - '**.md'
       - '.github/workflows/release.yml'
-      - 'FUNDING.yml'
+      - '.github/FUNDING.yml'
 
 jobs:
   build-linux:
