--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,22 +45,22 @@ jobs:
         name: windows-build
         path: fyne-cross/bin/windows-amd64
 
-  # build-mac:
-  #   runs-on: macos-latest
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   - name: Set up Go
-  #     uses: actions/setup-go@v5
-  #     with:
-  #       go-version: 1.22
-  #   - name: Build Fyne application for macOS
-  #     # run: fyne package -os darwin -icon Icon.png
-  #     run: GOOS=darwin GOARCH=arm64 go build -o SoundscapeSync.app
-  #   - name: Upload macOS artifact
-  #     uses: actions/upload-artifact@v4
-  #     with:
-  #       name: macos-build
-  #       path: SoundscapeSync.app
+  build-mac:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: 1.22
+    - name: Build Fyne application for macOS
+      # run: fyne package -os darwin -icon Icon.png
+      run: GOOS=darwin GOARCH=arm64 go build -o SoundscapeSync.app
+    - name: Upload macOS artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: macos-build
+        path: SoundscapeSync.app
 
   create-release:
     runs-on: ubuntu-latest
