--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,19 +53,38 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version: 1.22
-    - name: Build Fyne application for macOS
-      # run: fyne package -os darwin -icon Icon.png
-      run: GOOS=darwin GOARCH=arm64 go build -o SoundscapeSync.app
+    - name: Compile for MacOS
+      run: |
+        GOOS=darwin GOARCH=arm64 go build -o SoundscapeSync_arm64
+        CGO_ENABLED=1 GOOS=darwin GOARCH=amd64 go build -o SoundscapeSync_amd64
+        lipo -create -output SoundscapeSync SoundscapeSync_amd64 SoundscapeSync_arm64
+        mkdir -p SoundscapeSync.app/Contents/MacOS
+        mv SoundscapeSync SoundscapeSync.app/Contents/MacOS/SoundscapeSync
+        echo '<?xml version="1.0" encoding="UTF-8"?>' > SoundscapeSync.app/Contents/Info.plist
+        echo '<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">' >> SoundscapeSync.app/Contents/Info.plist
+        echo '<plist version="1.0">' >> SoundscapeSync.app/Contents/Info.plist
+        echo '<dict>' >> SoundscapeSync.app/Contents/Info.plist
+        echo '  <key>CFBundleName</key>' >> SoundscapeSync.app/Contents/Info.plist
+        echo '  <string>SoundscapeSync</string>' >> SoundscapeSync.app/Contents/Info.plist
+        echo '  <key>CFBundleVersion</key>' >> SoundscapeSync.app/Contents/Info.plist
+        echo '  <string>1.0</string>' >> SoundscapeSync.app/Contents/Info.plist
+        echo '  <key>CFBundleIdentifier</key>' >> SoundscapeSync.app/Contents/Info.plist
+        echo '  <string>com.cloonar.soundscape-sync</string>' >> SoundscapeSync.app/Contents/Info.plist
+        echo '  <key>Executable</key>' >> SoundscapeSync.app/Contents/Info.plist
+        echo '  <string>SoundscapeSync</string>' >> SoundscapeSync.app/Contents/Info.plist
+        echo '</dict>' >> SoundscapeSync.app/Contents/Info.plist
+        echo '</plist>' >> SoundscapeSync.app/Contents/Info.plist
+        chmod +x SoundscapeSync.app/Contents/MacOS/SoundscapeSync
+        zip -r SoundscapeSync.app.zip SoundscapeSync.app
     - name: Upload macOS artifact
       uses: actions/upload-artifact@v4
       with:
         name: macos-build
-        path: SoundscapeSync.app
+        path: SoundscapeSync.app.zip
 
   create-release:
     runs-on: ubuntu-latest
-    # needs: [build-linux, build-windows, build-mac]
-    needs: [build-windows, build-linux]
+    needs: [build-linux, build-windows, build-mac]
     steps:
       - name: Generate Changelog
         id: changelog
@@ -77,13 +96,13 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref_name }}  # Tag name from the push event
-          release_name: Release ${{ github.ref_name }}  # Name of the release
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
           body: ${{ steps.changelog.outputs.changes }}
-          draft: false  # Set to true if you want to create a draft release
-          prerelease: true  # Set to true if this is a prerelease
+          draft: false
+          prerelease: true
 
       # - uses: actions/download-artifact@v4
       #   with:
@@ -116,12 +135,12 @@ jobs:
       - name: Upload Linux Asset
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}  # URL for uploading assets
-          asset_path: soundscape-sync  # Path to your asset file
-          asset_name: soundscape-sync-linux-x86  # Name of the asset file
-          asset_content_type: application/octet-stream  # Content type of the asset
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: soundscape-sync
+          asset_name: soundscape-sync-linux-x86
+          asset_content_type: application/octet-stream
 
       - uses: actions/download-artifact@v4
         with:
@@ -129,22 +148,22 @@ jobs:
       - name: Upload Windows Asset
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}  # URL for uploading assets
-          asset_path: SoundscapeSync.exe  # Path to your asset file
-          asset_name: SoundscapeSync.exe  # Name of the asset file
-          asset_content_type: application/x-msdownload  # Content type of the asset
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: SoundscapeSync.exe
+          asset_name: SoundscapeSync.exe
+          asset_content_type: application/x-msdownload
 
-      # - uses: actions/download-artifact@v4
-      #   with:
-      #     name: macos-build
-      # - name: Upload MacOS Asset
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }}  # URL for uploading assets
-      #     asset_path: SoundscapeSync.app  # Path to your asset file
-      #     asset_name: SoundscapeSync.app  # Name of the asset file
-      #     asset_content_type: application/octet-stream  # Content type of the asset
+      - uses: actions/download-artifact@v4
+        with:
+          name: macos-build
+      - name: Upload MacOS Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: SoundscapeSync.app.zip
+          asset_name: MacOS
+          asset_content_type: application/zip
