--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -165,5 +165,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: SoundscapeSync.app.zip
-          asset_name: MacOS
+          asset_name: MacOS.zip
           asset_content_type: application/zip
