--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        lfs: true
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
@@ -39,6 +41,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        lfs: true
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
@@ -57,6 +61,8 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        lfs: true
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
