--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        lfs: true
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
@@ -31,6 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        lfs: true
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
@@ -49,6 +53,8 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        lfs: true
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
