--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -173,3 +173,19 @@ jobs:
           asset_path: SoundscapeSync.app.zip
           asset_name: MacOS.zip
           asset_content_type: application/zip
+
+      - name: Generate checksum
+        uses: jmgilman/actions-generate-checksum@v1
+        with:
+          patterns: |
+            SoundscapeSync.exe
+            SoundscapeSync.app.zip
+      - name: Upload checksum
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: checksum.txt
+          asset_name: checksum.txt
+          asset_content_type: text/plain
